Revert "MT::Blog::post_save callback should be used. #1"
This reverts commit e117f82a017c4c863e0739147c3f6a42d62e22bb.

--- a/plugins/MoveAssets/config.yaml
+++ b/plugins/MoveAssets/config.yaml
@@ -7,5 +7,7 @@ plugin_link: https://github.com/masiuchi/mt-plugin-move-assets
 author_name: Masahiro Iuchi
 author_link: https://www.facebook.com/masahiro.iuchi
 
-callbacks:
-  MT::Blog::post_save: $MoveAssets::MoveAssets::Callback::move_assets
+applications:
+  cms:
+    callbacks:
+      cms_post_save.blog: $MoveAssets::MoveAssets::Callback::move_assets
